# ical

./: pyproject.toml
src/app/: .scratch.py  ical.py
src/output/: a-founder's-growth-guide_-how-to-approach-and-land-fortune-500-customers.ics  azure-cloud_-defense-in-depth.ics  beyond-the-_start_-of-your-startup_-are-you-legally-protecting-what-you're-building.ics  beyond-your-technical-product_-business-principles-of-building-your-startup-beyond-your-tech-stack..ics  big-data-use-cases.ics  black-is-tech-conference-2022.ics  building-trust-in-blockchain-and-crypto.ics  cloud-applications_-utilizing-emerging-technologies-(et)-for-success.ics  i-thought-web3-was-secure-understanding-security-in-the-blockchain-era.ics  it's-all-in-the-networks_-building-relationships-as-the-foundation-for-your-career's-growth.ics  product-management-session.ics  rewriting-our-tech-history_-a-case-study.ics  security_-a-more-important-conversation-in-an-ever-increasing-digital-world.ics  software-development-cycle_-asking-better-questions-between-teams.ics  state-of-emergency_-the-black-infrastruture-and-the-need-to-rebuild-with-technology.ics  technical-writing.ics  test-driven-development_-a-modern-approach-to-software-quality-assurance.ics  the-intersection-of-dev-sec-and-ops.ics  ux-meets-machine-learning.ics  venture-capital_-connecting-pop-culture-and-tech.ics  virtual-expobooth-visits.ics  we-are-at-the-intersection-of-entrepreneurship-and-research.ics
tests/: test_ical.py
