[tool.poetry]
name = "ical"
version = "0.1.0"
description = ""
authors = ["xyz <jack@flnpb.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ics = "^0.7.2"
icalendar = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
